--- a/translations/kangyur/translations/094-002_toh725,909-the_dharani_mother_of_avalokitesvara.xml
+++ b/translations/kangyur/translations/094-002_toh725,909-the_dharani_mother_of_avalokitesvara.xml
@@ -13,7 +13,7 @@
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་སྤྱན་རས་གཟིགས་དབང་ཕྱུག་གི་ཡུམ་ཞེས་བྱ་བའི་གཟུངས།</title>
                 <title type="longTitle" xml:lang="en">The Noble Dhāraṇī “The Mother of Avalokiteśvara”</title>
                 <title type="otherTitle" xml:lang="zh"/>
-                <author role="translatorMain" ref="contributors.xml#team-48">Translated by Samye Translations and Publications<lb/>under the
+                <author role="translatorMain" ref="contributors.xml#team-48">Translated by Samye Translations<lb/>under the
                     patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-305">Stefan Mang</author>
                 <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.7 <date>2022</date>
+                <edition>v 1.1.8 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -73,7 +73,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-26T20:03:54.091Z" user="admin">26/10/2022 20:03:54</note>
+                <note type="lastUpdated" date-time="2022-11-04T14:26:34.956Z" user="admin">04/11/2022 14:26:34</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:49:48.717Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:49:48.717Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-06-09T09:20:34.006Z" user="line-tofte">2.h</note>
@@ -118,7 +118,7 @@
     <note type="updated" update="text-version" value="1.1.2" date-time="2021-03-12T19:16:35.843Z" user="celso">Non-breaking spaces before dandas</note>
     <note type="updated" update="text-version" value="1.1.3" date-time="2021-03-12T19:17:25.614Z" user="celso">reset blank pdfs</note>
     <note type="updated" update="text-version" value="1.1.4" date-time="2021-03-17T20:00:32.307Z" user="celso">@key added to note to create alternate message regarding vol 100+ text</note>
-                <note type="updated" update="text-version" value="1.1.5" date-time="2021-04-27T09:27:39.035Z" user="mike">Fixed Faxian mistake</note>    <note type="updated" update="text-version" value="1.1.6" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.7" date-time="2022-10-26T20:03:51.283Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
+                <note type="updated" update="text-version" value="1.1.5" date-time="2021-04-27T09:27:39.035Z" user="mike">Fixed Faxian mistake</note>    <note type="updated" update="text-version" value="1.1.6" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.7" date-time="2022-10-26T20:03:51.283Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.1.8" date-time="2022-11-04T14:26:32.149Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -135,7 +135,7 @@
             <div type="acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-094-002-2"/>
-                <p tid="4">Translated by Samye Translations and Publications under the guidance of Phakchok Rinpoche. The translation and
+                <p tid="4">Translated by Samye Translations under the guidance of Phakchok Rinpoche. The translation and
                     introduction were produced by Lowell Cook and Stefan Mang. The translation was checked against the Chinese by Dr. Jeffrey
                     Kotyk.</p>
                 <p tid="5">The translation was completed under the patronage and supervision of 84000: Translating the Words of the Buddha.</p>
