--- a/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
+++ b/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
@@ -15,8 +15,7 @@
         <title type="otherTitle" xml:lang="Bo-Ltn">bcom ldan ’das ma sgrol ma’i rgyud las sna tshogs
           bstan pa</title>
         <title type="otherTitle" xml:lang="bo">བཅོམ་ལྡན་འདས་མ་སྒྲོལ་མའི་རྒྱུད་ལས་སྣ་ཚོགས་བསྟན་པ།</title>
-        <author role="translatorMain" ref="eft:team-48">Translated by Samye Translations
-          and Publications<lb/>under the patronage and supervision of 84000: Translating the Words
+        <author role="translatorMain" ref="eft:team-48">Translated by Samye Translations<lb/>under the patronage and supervision of 84000: Translating the Words
           of the Buddha</author>
         <author role="translatorEng" ref="eft:person-313">Laura Dainty</author>
         <editor role="reviser" ref="eft:person-72">Oriane Lavolé</editor>
@@ -32,7 +31,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.5 <date>2022</date>
+                <edition>v 1.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -73,7 +72,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-10-26T20:05:52.062Z" user="admin">26/10/2022 20:05:52</note>
+        <note type="lastUpdated" date-time="2022-11-04T14:28:21.979Z" user="admin">04/11/2022 14:28:21</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:52:10.736Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:52:10.736Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-09T08:10:37.707Z" user="line-tofte">2.h</note>
@@ -125,6 +124,7 @@
           <note type="updated" update="translation-status" value="1" date-time="2022-10-16T10:19:30.049Z" user="sameer">1</note>
           <note type="updated" update="text-version" value="1.0.4" date-time="2022-10-16T10:19:30.049Z" user="sameer">Included in App v2.4</note>
           <note type="updated" update="text-version" value="1.0.5" date-time="2022-10-26T20:05:49.209Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
+          <note type="updated" update="text-version" value="1.0.6" date-time="2022-11-04T14:28:19.108Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -193,8 +193,7 @@
                 dang bcas pa</title>. See <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh438.html">Praise to Tārā with
                   Twenty-One Verses of Homage</ref>
-                            </title> (Toh 438), Samye Translations
-              and Publications 2020. The Tibetan translators chose not to translate the praise into
+                            </title> (Toh 438), Samye Translations 2020. The Tibetan translators chose not to translate the praise into
               Tibetan but instead followed the common practice of rendering a dhāraṇī or mantra in a
               Tibetan transliteration of the Sanskrit. This untranslated transcription represents an
               important witness of the Sanskrit manuscript it was based upon, and it was deemed
@@ -466,8 +465,7 @@
               translation of <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh438.html">Praise to Tārā with
                 Twenty-One Verses of Homage</ref>
-                            </title> (Toh 438; see Samye
-              Translations and Publications 2020) has been consulted, as well as the Sanskrit
+                            </title> (Toh 438; see Samye Translations 2020) has been consulted, as well as the Sanskrit
               editions of the praise prepared by Wayman and Pandey. Though these witnesses are
               largely in agreement and without major variants, minor emendations to the Sanskrit
               text have been made here.</note>
@@ -2214,14 +2212,12 @@
               <bibl xml:id="UT22084-094-003-427">
                                 <title xml:lang="Bo-Ltn">sgrol ma’i gzungs</title>
                   (<title xml:lang="Sa-Ltn">Tārādhāraṇī</title>). Toh 729, Degé Kangyur vol. 94
-                (rgyud, tsha), folio 222.a. English translation in Samye Translations and
-                Publications 2021.</bibl>
+                (rgyud, tsha), folio 222.a. English translation in Samye Translations 2021.</bibl>
               <bibl xml:id="UT22084-094-003-428">
                                 <title xml:lang="Bo-Ltn">sgrol ma la phyag ’tshal
                   nyi shu rtsa gcig gis bstod pa</title> (<title xml:lang="Sa-Ltn">Namastāraikaviṃśatistotra</title>) [<title xml:lang="en">Praise to Tārā with
                   Twenty-One Verses of Homage</title>]. Toh 438, Degé Kangyur vol. 81 (rgyud, ca),
-                folios 42.b–43.b. English translation in Samye Translations and
-                Publications 2020.</bibl>
+                folios 42.b–43.b. English translation in Samye Translations 2020.</bibl>
               <bibl xml:id="UT22084-094-003-429">chab mdo sa khul sman rstis khang. <title xml:lang="Bo-Ltn">khrungs dpe dri med shel gyi me long</title> [Mirror of
                 stainless crystal]. Beijing: mi rigs dpe skrun khang, 1995.</bibl>
               <bibl xml:id="UT22084-094-003-430">Denkarma (<title xml:lang="Bo-Ltn">pho brang stod
@@ -2250,7 +2246,7 @@
           <bibl xml:id="UT22084-094-003-436">Landesman, Susan. “Goddess Tārā: Silence and Secrecy on
             the Path to Enlightenment.” <title xml:lang="en">Journal of Feminist Studies in
               Religion</title> 24, no. 1 (Spring 2008): 44–59.</bibl>
-          <bibl xml:id="UT22084-094-003-437">Samye Translations and Publications, trans.
+          <bibl xml:id="UT22084-094-003-437">Samye Translations, trans.
             (2020). <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh438.html">Praise to Tārā with Twenty-One Verses of Homage</ref>
                         </title> (<title xml:lang="Sa-Ltn">Namastāraikaviṃśatistotra</title>, Toh 438). 84000: Translating the
