--- a/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
+++ b/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
@@ -17,8 +17,7 @@
           brgyad pa</title>
         <title type="otherTitle" xml:lang="Bo-Ltn">lha mo sgrol ma’i mtshan brgya rtsa brgyad pa
           zhes bya ba</title>
-        <author role="translatorMain" ref="eft:team-48">Translated by Samye Translations
-          and Publications<lb/> under the patronage and supervision of 84000: Translating the Words
+        <author role="translatorMain" ref="eft:team-48">Translated by Samye Translations<lb/> under the patronage and supervision of 84000: Translating the Words
           of the Buddha.</author>
         <author role="translatorEng" ref="eft:person-320">Roger Espel Llima</author>
         <author role="translatorEng" ref="eft:person-56">Alex Yiannopoulos</author>
@@ -34,7 +33,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -68,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-10-26T20:07:16.598Z" user="admin">26/10/2022 20:07:16</note>
+        <note type="lastUpdated" date-time="2022-11-04T14:30:04.459Z" user="admin">04/11/2022 14:30:04</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:56:38.631Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:56:38.631Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-05-28T13:10:21.844Z" user="line-tofte">2.h</note>
@@ -105,6 +104,7 @@
           <note type="updated" update="translation-status" value="1.a" date-time="2022-10-13T11:30:46.187Z" user="martina-cotter">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-10-13T11:30:46.187Z" user="martina-cotter">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-10-26T20:07:13.788Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
+          <note type="updated" update="text-version" value="1.0.2" date-time="2022-11-04T14:30:01.633Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -126,7 +126,7 @@
       <div type="acknowledgment">
         <head type="acknowledgment" tid="3">Acknowledgements</head>
         <milestone unit="chunk" xml:id="UT22084-094-005-2"/>
-        <p tid="4">Translated by Samye Translations and Publications under the guidance of
+        <p tid="4">Translated by Samye Translations under the guidance of
           Phakchok Rinpoche. The translation and introduction were produced and edited by Roger
           Espel Llima, Stefan Mang, Lowell Cook, Ryan Conlon, and Alex Yiannopoulos.</p>
       </div>
