--- a/translations/kangyur/placeholders/098-001_toh831-the_sutra_of_allgathering_awareness.xml
+++ b/translations/kangyur/placeholders/098-001_toh831-the_sutra_of_allgathering_awareness.xml
@@ -13,11 +13,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyud kyi rgyal po chen po rdo rje bkod pa kun 'dus rig pa'i mdo/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-098-001"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh831" type="text">
@@ -31,7 +32,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-09T15:24:07.911Z" user="admin">09/06/2022 15:24:07</note>
+                <note type="lastUpdated" date-time="2022-11-05T13:39:32.163Z" user="admin">05/11/2022 13:39:32</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-10T14:44:03.623Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-10T14:53:32.875Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-11-05T13:39:27.944Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-11-05T13:39:27.944Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
