--- a/translations/kangyur/placeholders/098-001_toh831-the_sutra_of_allgathering_awareness.xml
+++ b/translations/kangyur/placeholders/098-001_toh831-the_sutra_of_allgathering_awareness.xml
@@ -8,12 +8,14 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">vajrakulatantra­piṇḍārtha­vidyāyogasiddha</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">kun 'dus rig pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgata­cittaguhya­jñānārthagarbha­krodhavajrakula­tantrapiṇḍārtha­vidyāyogasiddha­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">《總集明經》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi thugs gsang ba'i ye shes don gyi snying po khro bo rdo rje rigs kun 'dus rig pa'i mdo rnal 'byor grub pa'i rgyud ces bya ba theg pa chen po'i mdo/</title>
+                <title type="otherTitle" xml:lang="zh">《總集明經》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyud kyi rgyal po chen po rdo rje bkod pa kun 'dus rig pa'i mdo/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-382">Dylan Esler</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -32,11 +34,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-05T13:39:32.163Z" user="admin">05/11/2022 13:39:32</note>
+                <note type="lastUpdated" date-time="2022-11-05T13:40:15.391Z" user="admin">05/11/2022 13:40:15</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-10T14:44:03.623Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-10T14:53:32.875Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-11-05T13:39:27.944Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-11-05T13:39:27.944Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-11-05T13:40:13.943Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
