--- a/translations/kangyur/placeholders/097-002_toh829-the_sutra_of_allgathering_awareness_or_the_sutra_that_gathers_all_intentions.xml
+++ b/translations/kangyur/placeholders/097-002_toh829-the_sutra_of_allgathering_awareness_or_the_sutra_that_gathers_all_intentions.xml
@@ -9,14 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">kun 'dus rig pa'i mdo/ \(mdo dgongs pa 'dus pa/\)</title>
                 <title type="otherTitle" xml:lang="en">[Note: translated from Burushaski, a language of the Hunza, Nagar, and Yasin valleys of Gilgit-Baltistan. Despite its initial title, which is similar to that of Toh 831, this text is commonly referred to by the title given in the chapter colophons, mdo dgongs pa 'dus pa, The Sūtra that Gathers All Intentions.]</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgata­cittajñāna­guhyārthagarbhavyūha­vajratantra­siddhiyogāgamasamājasarva­vidyāsūtra­mahāyānābhisamaya­dharmaparyāyavivyūha­nāmasūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas kun gyi dgongs pa 'dus pa'i mdo chen po/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi thugs gsang ba'i ye shes don gyi snying po rdo rje bkod pa'i rgyud rnal 'byor grub pa'i lung kun 'dus rig pa'i mdo theg pa chen po mngon par rtogs pa chos kyi rnam grangs rnam par bkod pa zhes bya ba'i mdo/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas kun gyi dgongs pa 'dus pa'i mdo chen po/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">spyi mdo dgongs pa 'dus pa/</title>
                 <title type="otherTitle" xml:lang="zh">《總集明經》（意總集經）</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-382">Dylan Esler</author>
                 <sponsor ref="sponsors.xml#sponsor-38">Sun Ping, Tian Xingwen and Sun Fanglin</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -35,10 +37,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-05T13:41:32.03Z" user="admin">05/11/2022 13:41:32</note>
+                <note type="lastUpdated" date-time="2022-11-05T13:42:16.042Z" user="admin">05/11/2022 13:42:16</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:47:07.07Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-11-05T13:41:27.832Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-05T13:41:27.832Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-05T13:42:14.582Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
