--- a/translations/kangyur/translations/072-002_toh302-what_medicants_hold_most_dear.xml
+++ b/translations/kangyur/translations/072-002_toh302-what_medicants_hold_most_dear.xml
@@ -6,34 +6,32 @@
       <titleStmt>
         <title type="mainTitle" xml:lang="en">What Mendicants Hold Most Dear</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Bhikṣuprareju</title>
-        <title type="mainTitle" xml:lang="Bo-Ltn">dge slong la rab tu gces pa</title>
         <title type="mainTitle" xml:lang="bo">དགེ་སློང་ལ་རབ་ཏུ་གཅེས་པ་།</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">dge slong la rab tu gces pa</title>
         <title type="longTitle" xml:lang="en">The Sūtra on What Mendicants Hold Most Dear</title>
+        <title type="longTitle" xml:lang="Sa-Ltn">Bhikṣuprareju­sūtranāma</title>
+        <title type="longTitle" xml:lang="bo">དགེ་སློང་ལ་རབ་ཏུ་གཅེས་པའི་མདོ་ཞེས་བྱ་བ།</title>
         <title type="longTitle" xml:lang="Bo-Ltn">dge slong la rab tu gces pa’i mdo zhes bya
           ba</title>
-        <title type="longTitle" xml:lang="bo">དགེ་སློང་ལ་རབ་ཏུ་གཅེས་པའི་མདོ་ཞེས་བྱ་བ།</title>
-        <title type="longTitle" xml:lang="Sa-Ltn">Bhikṣuprareju­sūtranāma</title>
         <title type="otherTitle" xml:lang="Sa-Ltn">bhikṣupriya­sūtranāma</title>
         <title type="otherTitle" xml:lang="Sa-Ltn">Bhikṣupriya</title>
-        <title type="otherTitle" xml:lang="zh"/>
-        <author ref="eft:team-59" role="translatorMain">Translated by Achi Translation Group under
+        <author role="translatorMain" ref="eft:team-59">Translated by Achi Translation Group under
           the patronage and supervision of 84000: Translating the Words of the Buddha</author>
         <consultant role="dharmaMaster" ref="eft:person-356">Khenchen Nyima Gyaltsen</consultant>
         <author role="translatorEng" ref="eft:person-358">Ven. Konchog Tenzin (Mark Riege)</author>
         <author role="translatorEng" ref="eft:person-19">Virginia Blum</author>
-        <author role="translatorEng" ref="eft:person-357">Ven. Yeshe Metog (Claudia
-          Jürgens)</author>
+        <author role="translatorEng" ref="eft:person-357">Ven. Yeshe Metog (Claudia Jürgens)</author>
         <consultant role="advisor" ref="eft:person-22">Meghan Howard</consultant>
-        <consultant role="projectManager" ref="eft:person-358">Ven. Konchog Tenzin (Mark
-          Riege)</consultant>
+        <consultant role="projectManager" ref="eft:person-358">Ven. Konchog Tenzin (Mark Riege)</consultant>
         <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
         <editor role="copyEditor" ref="eft:person-66">Joseph McClellan</editor>
         <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
         <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
         <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+        <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -67,7 +65,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-07-06T11:18:00.532Z" user="admin">06/07/2022 11:18:00</note>
+        <note type="lastUpdated" date-time="2022-11-28T14:04:22.743Z" user="admin">28/11/2022 14:04:22</note>
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="translation-status" value="4" date-time="2020-10-02T13:50:21.606Z" user="line-tofte">4</tei:note>
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:50:21.606Z" user="line-tofte">0.0.1</tei:note>
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="translation-status" value="3" date-time="2020-11-30T09:56:09.316Z" user="line-tofte">3</tei:note>
@@ -99,8 +97,9 @@
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="0.0.15" date-time="2022-06-24T09:30:18.029Z" user="line-tofte">Auto
           (update-publication-status)</tei:note>
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="0.0.16" date-time="2022-06-24T09:31:09.843Z" user="line-tofte">Auto (update-contributors)</tei:note>
-          <note type="updated" update="translation-status" value="2" date-time="2022-07-06T11:17:52.756Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-06T11:17:52.756Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="translation-status" value="2" date-time="2022-07-06T11:17:52.756Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-06T11:17:52.756Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-28T14:04:16.928Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
